crates/pandalang/src/snapshots/pandalang__parser__tests__parses_progs@declare__unit.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_prog(path)
input_file: crates/pandalang/src/snapshot_inputs/progs/declare/unit.panda
---
Ok(
    Program {
        stmts: [
            Declare(
                Declare {
                    name: "foo",
                    typ: Simple(
                        "Unit",
                    ),
                },
            ),
        ],
    },
)
